--- a/libraryVersions.yaml
+++ b/libraryVersions.yaml
@@ -1,4 +1,5 @@
 idscp2: "0.4.3"
+idscp2ex: "0.4.5-ex"
 ktlint: "0.41.0"
 
 # Pinning
@@ -100,3 +101,5 @@ javaxAnnotation: "1.3.2"
 
 springBoot: "2.4.5"
 bouncyCastle: "1.68"
+
+ids-processor: "0.1-SNAPSHOT"
